--- a/gallery-slider.html
+++ b/gallery-slider.html
@@ -45,23 +45,23 @@
     <header class="header">
       <a class="header__logo" href="/index.html">KT AULETA</a>
       <nav class="header-nav header__nav">
-        <ul>
-          <li class="header-nav__item">
-            <a href="/gallery.html  header-nav__item--active">PORTFOLIO</a>
-          </li>
-           <li class="header-nav__item">
-            <a href="/video.html">FILMS</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/archive.html">Archive</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/ktv.html">KTV</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/info.html">INFO</a>
-          </li>
-        </ul>
+          <ul>
+              <li class="header-nav__item">
+                  <a href="/kt/gallery.html">PORTFOLIO</a>
+              </li>
+              <li class="header-nav__item">
+                  <a href="/kt/video.html">FILMS</a>
+              </li>
+              <li class="header-nav__item header-nav__item--active">
+                  <a href="/kt/archive.html">Archive</a>
+              </li>
+              <li class="header-nav__item">
+                  <a href="/kt/ktv.html">KTV</a>
+              </li>
+              <li class="header-nav__item">
+                  <a href="/kt/info.html">INFO</a>
+              </li>
+          </ul>
       </nav>
       <button class="header__mobile-menu-btn">menu</button>
     </header>
