--- a/KTV.html
+++ b/KTV.html
@@ -46,23 +46,23 @@
       <a class="header__logo" href="/index.html">KT AULETA</a>
       <button class="header__mobile-menu-btn">menu</button>
       <nav class="header-nav header__nav">
-        <ul>
-          <li class="header-nav__item">
-            <a href="/gallery.html">PORTFOLIO</a>
-          </li>
-           <li class="header-nav__item">
-            <a href="/video.html">FILMS</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/archive.html">Archive</a>
-          </li>
-          <li class="header-nav__item header-nav__item--active">
-            <a href="/ktv.html">KTV</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/info.html">INFO</a>
-          </li>
-        </ul>
+          <ul>
+              <li class="header-nav__item">
+                  <a href="/kt/gallery.html">PORTFOLIO</a>
+              </li>
+              <li class="header-nav__item">
+                  <a href="/kt/video.html">FILMS</a>
+              </li>
+              <li class="header-nav__item header-nav__item--active">
+                  <a href="/kt/archive.html">Archive</a>
+              </li>
+              <li class="header-nav__item">
+                  <a href="/kt/ktv.html">KTV</a>
+              </li>
+              <li class="header-nav__item">
+                  <a href="/kt/info.html">INFO</a>
+              </li>
+          </ul>
       </nav>
     </header>
     <main id="cbp-fbscroller">
