--- a/index.html
+++ b/index.html
@@ -20,94 +20,84 @@
 //  ¯\_(ツ)_/¯
 
 --> <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Project Title</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="shortcut icon" href="favicon.gif" /> -->
-  <!-- Place favicon.ico and apple-touch-icon.jpg in the root directory -->
-  <link rel="stylesheet" href="/kt/build/stylesheets/main.css">
-  <!-- <script src="js/vendor/modernizr-2.8.3.custom.min.js"></script> -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Project Title</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link rel="shortcut icon" href="favicon.gif" /> -->
+    <!-- Place favicon.ico and apple-touch-icon.jpg in the root directory -->
+    <link rel="stylesheet" href="/kt/build/stylesheets/main.css">
+    <!-- <script src="js/vendor/modernizr-2.8.3.custom.min.js"></script> -->
 </head>
 <body class="home scrollEffect">
 <!--[if lt IE 7]>
-  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-  <!-- Add your site or application content here -->
-    <header class="header header--home">
-      <a class="header__logo" href="/index.html">KT AULETA</a>
-      <nav class="header-nav header__nav">
-        <ul>
-          <li class="header-nav__item">
-            <a href="/gallery.html">PORTFOLIO</a>
-          </li>
-           <li class="header-nav__item">
-            <a href="/video.html">FILMS</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/archive.html">Archive</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/ktv.html">KTV</a>
-          </li>
-          <li class="header-nav__item">
-            <a href="/info.html">INFO</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="header__mobile-menu-btn">menu</button>
-    </header>
-    <main>
-      <section class="full-screen-widget background-section">
+<!-- Add your site or application content here -->
+<header class="header header--home">
+    <a class="header__logo" href="/index.html">KT AULETA</a>
+    <nav class="header-nav header__nav">
+        czzzz
+    </nav>
+    <button class="header__mobile-menu-btn">menu</button>
+</header>
+<main>
+    <section class="full-screen-widget background-section">
         <h3 class="aligned-text">KT Auleta is a photographer and<br> director based in NYC</h3>
-          <img src="build/images/4.2.jpg" alt="images">
-      </section>
-      <section class="full-screen-widget background-section">
-         <img src="build/images/3.2.jpg" alt="picture">
+        <img src="build/images/4.2.jpg" alt="images">
+    </section>
+    <section class="full-screen-widget background-section">
+        <img src="build/images/3.2.jpg" alt="picture">
         <h3 class="aligned-text">S Magazine</h3>
-      </section>
-      <section class="full-screen-widget full-screen-widget--video">
+    </section>
+    <section class="full-screen-widget full-screen-widget--video">
         <h3 class="aligned-text">This is a story title</h3>
-          <div class="fluid-width-video-wrapper">
-            <video src="https://player.vimeo.com/external/134202127.hd.mp4?s=8496da66903dc8d3dc0d71e7b76500f9f7198864&profile_id=113" muted  loop preload="metadata" poster="build/images/vimeo_img/vimeo_img1.jpg" class="js-resizebleVideo"></video>
-          </div>  
-      </section>
-      <section class="full-screen-widget background-section ">
-         <img src="build/images/2.3.jpg" alt="picture">
+        <div class="fluid-width-video-wrapper">
+            <video src="https://player.vimeo.com/external/134202127.hd.mp4?s=8496da66903dc8d3dc0d71e7b76500f9f7198864&profile_id=113" muted loop preload="metadata"
+                   poster="build/images/vimeo_img/vimeo_img1.jpg" class="js-resizebleVideo"></video>
+        </div>
+    </section>
+    <section class="full-screen-widget background-section ">
+        <img src="build/images/2.3.jpg" alt="picture">
         <h3 class="aligned-text">This is a story title</h3>
-      </section>
-      <section class="full-screen-widget full-screen-widget--video">
+    </section>
+    <section class="full-screen-widget full-screen-widget--video">
         <h3 class="aligned-text">This is a story title</h3>
-          <div class="fluid-width-video-wrapper">
-            <video src="https://player.vimeo.com/external/134202127.hd.mp4?s=8496da66903dc8d3dc0d71e7b76500f9f7198864&profile_id=113" muted  loop preload="metadata" poster="build/images/vimeo_img/vimeo_img2.jpg" class="js-resizebleVideo"></video>
-          </div>
-      </section>
-      <section class="full-screen-widget background-section ">
-         <img src="build/images/5.1.jpg" alt="picture">
+        <div class="fluid-width-video-wrapper">
+            <video src="https://player.vimeo.com/external/134202127.hd.mp4?s=8496da66903dc8d3dc0d71e7b76500f9f7198864&profile_id=113" muted loop preload="metadata"
+                   poster="build/images/vimeo_img/vimeo_img2.jpg" class="js-resizebleVideo"></video>
+        </div>
+    </section>
+    <section class="full-screen-widget background-section ">
+        <img src="build/images/5.1.jpg" alt="picture">
         <h3 class="aligned-text">This is a story title</h3>
-      </section>
-    </main>
-    <footer class="footer">
-        <p class="footer__copyright">All rights reserved © KT Auleta Studio LLC 2016</p>
-        <ul class="footer__social">
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Vimeo</a></li>
-          <li><a href="#">Twitter</a></li>
-        </ul>
-    </footer>
+    </section>
+</main>
+<footer class="footer">
+    <p class="footer__copyright">All rights reserved © KT Auleta Studio LLC 2016</p>
+    <ul class="footer__social">
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Vimeo</a></li>
+        <li><a href="#">Twitter</a></li>
+    </ul>
+</footer>
 
-  <!-- Scripts -->
-  <script src="build/javascripts/libs/jquery-2.1.1.js"></script>
-  <script src="build/javascripts/libs/jquery-ui.min.js"></script>
-  <script src="build/javascripts/libs/froogaloop.js"></script>
-  <script src="build/javascripts/libs/jquery.fitvids.js"></script>
-  <script src="build/javascripts/main.js"></script>
+<!-- Scripts -->
+<script src="build/javascripts/libs/jquery-2.1.1.js"></script>
+<script src="build/javascripts/libs/jquery-ui.min.js"></script>
+<script src="build/javascripts/libs/froogaloop.js"></script>
+<script src="build/javascripts/libs/jquery.fitvids.js"></script>
+<script src="build/javascripts/main.js"></script>
 </body>
 </html>
