--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
 <header class="header header--home">
     <a class="header__logo" href="/index.html">KT AULETA</a>
     <nav class="header-nav header__nav">
-        czzzz
+        <ul>
+            <li class="header-nav__item">
+                <a href="/kt/gallery.html">PORTFOLIO</a>
+            </li>
+            <li class="header-nav__item">
+                <a href="/kt/video.html">FILMS</a>
+            </li>
+            <li class="header-nav__item header-nav__item--active">
+                <a href="/kt/archive.html">Archive</a>
+            </li>
+            <li class="header-nav__item">
+                <a href="/kt/ktv.html">KTV</a>
+            </li>
+            <li class="header-nav__item">
+                <a href="/kt/info.html">INFO</a>
+            </li>
+        </ul>
     </nav>
     <button class="header__mobile-menu-btn">menu</button>
 </header>
